syntax = "proto3";
package ws.leap.kettle.test;
option java_outer_classname = "EchoProto";
option java_multiple_files = true;

message EchoReq {
  int32 id = 1;
  string value = 2;
}

message EchoCountReq {
  int32 count = 1;
}

message EchoResp {
  int32 id = 1;
  string value = 2;
}

message EchoCountResp {
 int32 count = 1;
}

service Echo {
    rpc unary(EchoReq) returns (EchoResp);
    rpc serverStreaming(EchoCountReq) returns (stream EchoResp);
    rpc clientStreaming(stream EchoReq) returns (EchoCountResp);
    rpc bidiStreaming(stream EchoReq) returns (stream EchoResp);
}
